Bug 918523 - Prevent rec_queue overrun. r=jesup, a=koi+